fixed vertical alignment of engagement bar

--- a/threads.css
+++ b/threads.css
@@ -46,10 +46,14 @@ details div {
 .post-right {
     padding: 0px;
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
 .post-body {
     padding: 10px;
+    flex: 1;
 }
 
 .post-author {
